<resources>
    <string name="app_name">CTChat</string>
    <string name="notification_service_title">对讲服务</string>
    <string name="notification_service_content">对讲服务已经在前台启动</string>
    <string name="notification_app_crash">很抱歉,程序出现异常,即将退出</string>
    <string name="please_new_temp_group_name">请添加收藏临时组名称</string>
    <string name="temp_group_name_empty">临时组名不可为空</string>
    <string name="temp_group_svae_success">临时组保存成功</string>
    <string name="temp_group_svae_error">临时组保存失败</string>
    <string name="temp_group_delete_confirm">是否取消收藏此临时组？</string>
    <string name="login">确认登录</string>
    <string name="login_loading">登录中......</string>
    <string name="registration">注册</string>
    <string name="exit">退出</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="hint">提示</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="login_username_empty_error_tip">输入账号不能为空</string>
    <string name="login_password_empty_error_tip">输入密码不能为空</string>
    <string name="login_username_error_tip">输入账号有误&#8230;</string>
    <string name="login_password_error_tip">输入密码有误&#8230;</string>
    <string name="login_user_id_hint">输入您的账号</string>
    <string name="login_user_password_hint">输入您的密码</string>
    <string name="ptt_account_result_err_invalid">无效账号</string>
    <string name="ptt_account_result_err_user_not_exist">账号不存在</string>
    <string name="ptt_account_result_err_user_pwd">密码错误</string>
    <string name="ptt_account_result_err_in_blacklist">黑名单账号无法登入</string>
    <string name="ptt_account_result_err_not_acceptable">登入异常（账号无权限）</string>
    <string name="ptt_account_result_err_pwd_dup">密码错误</string>
    <string name="ptt_account_result_err_server_unavailable">服务器异常</string>
    <string name="ptt_account_result_err_account_limited">登入异常（权限受限）</string>
    <string name="ptt_account_result_err_account_expire">账号已过期</string>
    <string name="ptt_account_result_err_account_forbidden">登入异常（账号被禁用）</string>
    <string name="ptt_account_result_err_code_expire">应用使用服务到期</string>
    <string name="net_error">网络异常</string>
    <string name="net_error_message">网络链接错误</string>
    <string name="net_error_user_pwd">账号密码错误</string>
    <string name="net_error_model">设备型号未经授权</string>
    <string name="ptt_account_result_err_single">登入延迟</string>
    <string name="ptt_account_result_err_license">应用未经授权</string>
    <string name="ptt_account_result_err_account_duplicate">账号错误</string>
    <string name="net_disconnect_notice">网络或服务中断，请重新连接网络</string>
    <string name="default_loading_tip">加载中......</string>
    <string name="out_loading">恢复数据中....</string>
    <string name="check_valid_err_device_id">设备ID未录入，请联系管理员</string>
    <string name="check_valid_err_unauth_device">未授权终端，请联系管理员</string>
    <string name="ptt_library_warning">警告</string>
    <string name="ptt_library_accounts_remote_login">您的账号在异地登入</string>
    <string name="ptt_library_ptt_reLogin">重新登入</string>
    <string name="ptt_library_exit_application">退出应用</string>
    <string name="dispatcher_function_change">您的调度台功能发生变化</string>
    <string name="contact">联系人</string>
    <string name="channel">预定义组</string>
    <string name="history">记录</string>
    <string name="exit_application_tip">再按返回键应用将在后台运行</string>
    <string name="search">搜索</string>
    <string name="remote_forbid">该用户处于遥毙状态，禁止登录</string>
    <string name="much_password_request">密码验证次数超限，禁止登录</string>
    <string name="all_contacts">全部联系人</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="reception_online">前台在线</string>
    <string name="bg_online">后台在线</string>
    <string name="back">返回</string>
    <string name="online_status">在线情况</string>
    <string name="contact_number">联系电话</string>
    <string name="contact_account">用户账号</string>
    <string name="department">所在部门</string>
    <string name="administration_department">行政部</string>
    <string name="start_talk">发起对讲</string>
    <string name="immediate_message">即时消息</string>
    <string name="create_temp_group">新建临时组</string>
    <string name="prefine_group">预定义组</string>
    <string name="temp_group">临时组</string>
    <string name="all">共</string>
    <string name="people">人</string>
    <string name="wait_order">待办事项（待实现）</string>
    <string name="day_life">日常</string>
    <string name="txt_clear">清    空</string>
    <string name="select_theme">选择主题</string>
    <string name="info_description">信息描述</string>
    <string name="text_length_limit">(100字以内)</string>
    <string name="upload_picture">上传图片</string>
    <string name="upload_picture_from_local">本地上传</string>
    <string name="shooting_picture">拍摄图片</string>
    <string name="confirm_upload">确认上传</string>
    <string name="state_free">空闲</string>
    <string name="cloud_space_full">云存储空间不足，请联系管理员</string>
    <string name="tree_contacts_loading">联系人数据刷新中...</string>
    <string name="btn_send">发送</string>
    <string name="down_tlak">按住说话</string>
    <string name="up_end">松开结束</string>
    <string name="video">视频</string>
    <string name="take_photo">拍照</string>
    <string name="location">位置</string>
    <string name="empty_content">内容为空</string>
    <string name="upload_video">上传视频</string>
    <string name="shooting_video">拍摄视频</string>
    <string name="copy_right">复制成功</string>
    <string name="delete_all_success">消息已清空</string>
    <string name="delete_success">删除成功</string>
    <string name="message_resend">消息已重发</string>
    <string name="pull_to_refresh_pull_label">刷新数据</string>
    <string name="pull_to_refresh_release_label">松开刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开加载</string>
    <string name="pull_to_refresh_footer_pull_label">加载数据</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="pull_to_refresh_latest_time_label">最近更新</string>
    <string name="no_theme">无主题</string>
    <string name="intercomimactivity_getpicturefail">图片获取失败</string>
    <string name="voice_cancel_tips">松开手指,取消发送</string>
    <string name="voice_up_tips">手指上滑,取消操作</string>
    <string name="action_settings">设置</string>
    <string name="video_recorder">视频</string>
    <string name="call_tempgroup">临时会话</string>
    <string name="intercom_state_talking">发言中</string>
    <string name="talk_request">申请中</string>
    <string name="intercom_state_free">空闲</string>
    <string name="intercom_state_center_wait">正在分配调度员...</string>
    <string name="intercom_state_offline">未连接</string>
    <string name="exit_session_tip">再按返回键结束当前会话</string>
    <string name="session_wait">当前会话请求等待人数：</string>
    <string name="pars_json_fail">解析JSON错误</string>
    <string name="setting_up_the_session">会话建立中</string>
    <string name="phone_calls_remind">来电提醒</string>
    <string name="call_from">来电</string>
    <string name="call_center_err">调度员忙，请稍后再试</string>
    <string name="intercom_channel_manager_grab_enable">抢断模式已开启，您可以随时抢断低级别用户的讲话！</string>
    <string name="intercom_channel_manager_grab_disable">抢断模式已关闭</string>
    <string name="intercom_channel_manager_lock_enable">锁定模式已开启，将不再监听其它预定义组会话！</string>
    <string name="intercom_channel_manager_lock_disable">锁定模式已关闭</string>
    <string name="intercom_tools_setting_voice_mode_earphone">听筒模式</string>
    <string name="intercom_tools_setting_voice_mode_speaker">扬声器模式</string>
    <string name="intercom_channel_tip_media_queue_in">您已进入讲话队列，请等待</string>
    <string name="intercom_channel_tip_media_queue_out">您已退出讲话队列</string>
    <string name="intercom_channel_tip_media_interruptted">您的讲话被高级别用户打断！</string>
    <string name="intercom_channel_tip_media_listen_only">您没有讲话的权限！</string>
    <string name="intercom_channel_tip_media_exception">当前网络不佳，服务器收回了您的话语权！</string>
    <string name="intercom_channel_tip_media_timeout">当前网络不佳，一直未申请到话语权！</string>
    <string name="intercom_channel_tip_media_timeup">您的讲话时间已到！</string>
    <string name="intercom_channel_tip_media_speak_full">对方结束讲话后才能发言！</string>
    <string name="invite_contact_number_upper">邀请人数已达上限</string>
    <string name="invite_contact_no_empty">至少邀请一位成员</string>
    <string name="intercom_im_tip_invalid_message">[不支持的消息格式]</string>
    <string name="video_record_short">视频录制时间太短</string>
    <string name="parameter_error">参数验证错误</string>
    <string name="change_account">更换账号</string>
    <string name="change_password">修改密码</string>
    <string name="common_problem">常见问题</string>
    <string name="flow_count">流量统计</string>
    <string name="about">关于</string>
    <string name="exit_login">退出登录</string>
    <string name="exit_login_message">确定要退出登录吗</string>
    <string name="add_contact">添加成员</string>
    <string name="finish">完成</string>
    <string name="new_message_remind">新消息提醒</string>
    <string name="advanced_setting">高级设置</string>
    <string name="intercom_setting">对讲设置</string>
    <string name="media_setting">多媒体设置</string>
    <string name="whether_open_new_message_remind">是否开启铃声</string>
    <string name="whether_open_notice">是否开启通知</string>
    <string name="whether_open_shock">是否开启振动</string>
    <string name="chat_setting">聊天设置</string>
    <string name="large_font">大字体</string>
    <string name="clear_chat_history">清空聊天记录</string>
    <string name="whether_use_volume_key_as_intercom">是否将音量键作为对讲键</string>
    <string name="locatin_frequency">定位频度</string>
    <string name="volume_setting">音量设置</string>
    <string name="mute_mode">静音模式</string>
    <string name="volume_microphone">声音放大器</string>
    <string name="increase_intercom_quality">增强对讲音质</string>
    <string name="screen_ptt_key">屏幕PTT按键</string>
    <string name="volume_key">音量按键</string>
    <string name="auto_answer">自动应答</string>
    <string name="not_disturb">免打扰</string>
    <string name="heart_beat_frequency_setting">心跳频率设置</string>
    <string name="normal_mode">正常模式</string>
    <string name="picture_upload_setting">图片上传设置</string>
    <string name="not_wifi_notice_user">非Wifi环境，上报时提示用户</string>
    <string name="whether_open_auto_download">是否开启自动下载</string>
    <string name="storage_location_setting">设置存储位置</string>
    <string name="phone_memory">手机内存</string>
    <string name="sd_card">SD储存卡</string>
    <string name="storage_location">存储位置</string>
    <string name="max_size_not_exceed">最大不超过25M</string>
    <string name="clear_history_list">清空聊天列表</string>
    <string name="use_of_all_traffic">应用消耗的总流量</string>
    <string name="mobile_net">移动网络</string>
    <string name="wifi_net">无线局域网络</string>
    <string name="heart_beat_frequency">心跳频率</string>
    <string name="high_performance_time">高性能(5秒)</string>
    <string name="faster_time">较快(10秒)</string>
    <string name="medium_performance_time">中等(15秒)</string>
    <string name="normal_mode_time">正常模式(20秒)</string>
    <string name="low_speed_time">低速(40秒)</string>
    <string name="confirm_clear_history">确认要清空聊天记录吗？</string>
    <string name="current_password">当前密码:</string>
    <string name="new_password">新密码:</string>
    <string name="pop_msg_del_all">清空全部</string>
    <string name="pop_msg_del">删除</string>
    <string name="pop_msg_resend">重发</string>
    <string name="pop_msg_copy">复制</string>
    <string name="volume_microphone_desc">启用声音放大器可将外放音量适当增大</string>
    <string name="increase_intercom_quailty_desc">可以提高您讲话的音质，但同时您讲话时所消耗的流量就会增加</string>
    <string name="screen_ptt_desc">是否支持屏幕PTT按键点击讲话方式（点击即可讲话，再点一下释放），同时仍支持按住讲话</string>
    <string name="volume_key_desc">是否将音量下键作为PTT物理按键</string>
    <string name="auto_answer_desc">有对讲来电时，是否自动应答</string>
    <string name="no_disturb_desc">开启此项后，所有的对讲来电将会自动拒接</string>
    <string name="phone_number_hint">请输入手机号码</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="hint_sms_code">输入验证码</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="qptt_login">登录</string>
</resources>