<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        android:textColor="@color/phone_number_txt_color"
        android:textSize="@dimen/sp_24" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="bottom"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phone_number_edittxt"
            android:layout_width="@dimen/dp_220"
            android:layout_height="@dimen/dp_38"
            android:gravity="center_vertical|start"
            android:hint="@string/phone_number_hint"
            android:inputType="number"
            android:paddingBottom="@dimen/dp_0"
            android:paddingTop="@dimen/dp_0"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_edit_phone"
            android:textSize="@dimen/sp_15" />

        <EditText
            android:id="@+id/pwd_edittxt"
            android:layout_width="@dimen/dp_220"
            android:layout_height="@dimen/dp_38"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="start|center_vertical"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/dp_0"
            android:paddingTop="@dimen/dp_0"
            android:textColor="@color/phone_number_txt_color"
            android:textColorHint="@color/gray_edit_phone"
            android:textSize="@dimen/sp_15" />

        <LinearLayout
            android:id="@+id/linear_sms_code"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/edit_sms_code"
                android:layout_width="@dimen/dp_110"
                android:layout_height="@dimen/dp_38"
                android:gravity="start|center_vertical"
                android:hint="@string/hint_sms_code"
                android:inputType="number"
                android:paddingBottom="@dimen/dp_0"
                android:paddingTop="@dimen/dp_0"
                android:textColor="@color/phone_number_txt_color"
                android:textColorHint="@color/gray_edit_phone"
                android:textSize="@dimen/sp_15" />

            <Button
                android:id="@+id/btn_get_sms_code"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_38"
                android:layout_marginLeft="@dimen/dp_9"
                android:layout_marginStart="@dimen/dp_9"
                android:gravity="center"
                android:padding="@dimen/dp_0"
                android:text="@string/get_sms_code"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>
        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="@dimen/dp_220"
            android:layout_height="@dimen/dp_38"
            android:layout_marginTop="@dimen/dp_37"
            android:enabled="false"
            android:gravity="center"
            android:padding="@dimen/dp_0"
            android:text="@string/qptt_login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>

</LinearLayout>
