<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@color/bg_pop"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:background="@drawable/shape_chatting_edit"
        android:showDividers="middle">

        <TextView
            android:id="@+id/pop_del_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pop_msg_del_all"
            android:textColor="@color/black"
            android:background="@drawable/selector_contacts_list_item"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pop_del"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:text="@string/pop_msg_del"
            android:textColor="@color/black"
            android:background="@drawable/selector_contacts_list_item"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pop_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:text="@string/pop_msg_resend"
            android:textColor="@color/black"
            android:background="@drawable/selector_contacts_list_item"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pop_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:text="@string/pop_msg_copy"
            android:textColor="@color/black"
            android:background="@drawable/selector_contacts_list_item"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>