<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
   android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl_title_bar_intercom_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_contact_detail">
        <RelativeLayout
            android:id="@+id/rl_intercom_setting_back_to_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
            <ImageView
                android:id="@+id/iv_intercom_setting_back_to_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_default"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_toRightOf="@+id/iv_intercom_setting_back_to_main"
                android:textColor="@color/white"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intercom_setting"
            android:layout_centerInParent="true"
            android:textColor="@color/white" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_volume_microphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume_microphone"
            android:layout_alignParentLeft="true"
            android:textColor="@color/contact_name_color" />
        <TextView
            android:layout_below="@id/tv_volume_microphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/contact_number_bg"
            android:text="@string/volume_microphone_desc" />
        <Button
            android:id="@+id/tog_btn_volume_microphone"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="已关"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_bottom_color">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_increase_intercom_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_intercom_quality"
            android:layout_alignParentLeft="true"
            android:textColor="@color/contact_name_color" />
        <TextView
            android:layout_below="@id/tv_increase_intercom_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/contact_number_bg"
            android:layout_marginRight="100dp"
            android:text="@string/increase_intercom_quailty_desc" />
        <Button
            android:id="@+id/tog_btn_increase_intercom_quality"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="已关"/>/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_bottom_color">
    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
        <TextView
            android:id="@+id/tv_screen_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_ptt_key"
            android:layout_alignParentLeft="true"
            android:textColor="@color/contact_name_color" />
        <TextView
            android:layout_below="@id/tv_screen_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/contact_number_bg"
            android:layout_marginRight="100dp"
            android:text="@string/screen_ptt_desc" />
        </RelativeLayout>
        <com.ctchat.sample.widget.togglebutton.CustomToggleButton
            android:id="@+id/tog_btn_screen_ptt_key"
            style="@style/CustomToggleButton"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_bottom_color">
    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_volume_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume_key"
            android:layout_alignParentLeft="true"
            android:textSize="18sp"
            android:textColor="@color/contact_name_color" />
        <TextView
            android:layout_below="@id/tv_volume_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/contact_number_bg"
            android:layout_marginRight="100dp"
            android:text="@string/volume_key_desc" />
        <Button
            android:id="@+id/tog_btn_volume_key"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="已关"/>/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_bottom_color">
    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_auto_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_answer"
            android:layout_alignParentLeft="true"
            android:textColor="@color/contact_name_color" />
        <TextView
            android:layout_below="@id/tv_auto_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/contact_number_bg"
            android:layout_marginRight="100dp"
            android:text="@string/auto_answer_desc" />
        <Button
            android:id="@+id/tog_btn_auto_answer"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="已关"/>/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_bottom_color">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_not_disturb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_disturb"
            android:layout_alignParentLeft="true"
            android:textColor="@color/contact_name_color" />
        <TextView
            android:layout_below="@id/tv_not_disturb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/contact_number_bg"
            android:layout_marginRight="100dp"
            android:text="@string/no_disturb_desc" />
        <Button
            android:id="@+id/tog_btn_not_disturb"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="已关"/>/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_bottom_color">
    </View>

    <RelativeLayout
        android:id="@+id/rl_heart_beat_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/selector_contacts_list_item">
        <TextView
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_beat_frequency_setting"
            android:layout_alignParentLeft="true"
            android:textSize="18sp"
            android:textColor="@color/contact_name_color"
            android:layout_centerVertical="true"/>
        <ImageView
            android:id="@+id/iv_heart_beat_frequency_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/side_open"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_heart_beat_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/contact_name_color"
            android:layout_toLeftOf="@id/iv_heart_beat_frequency_icon"
            android:layout_marginRight="8dp" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_bottom_color">
    </View>
            <RelativeLayout
                android:id="@+id/rl_clear_chat_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:background="@drawable/selector_contacts_list_item">
                <TextView
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_chat_history"
                    android:layout_alignParentLeft="true"
                    android:textSize="18sp"
                    android:textColor="@color/contact_name_color"
                    android:layout_centerVertical="true"/>
                <ImageView
                    android:id="@+id/iv_clear_history_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/side_open"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_bottom_color">
            </View>

        </LinearLayout>
    </ScrollView>

</LinearLayout>